--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blog</title>
+</<body>
+    <h1>Blog</h1>
+    <ul>
+        {% for post in posts %}
+        <li>
+            <h2><a href="{{ url_for('blog_detail', post_id=post.id) }}">{{ post.title }}</a></h2>
+            <p>{{ post.snippet }}</p>
+            <p>Date: {{ post.date }}</p>
+        </li>
+        {% endfor %}
+    </ul>
+    <a href="{{ url_for('index') }}">Back to Home</a>
+</body>
+</html>
 
