--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,11 @@
             <a href="{{ url_for('services_page') }}">Services</a>
             <a href="{{ url_for('quote') }}">Get a Quote</a>
             <a href="{{ url_for('blog') }}">Blog</a>
-        </nav>
-    </header>
-    <div class="container">
-        <!-- Your content here -->
+               <!-- Your content here -->
     </div>
     <footer>
         <p>&copy; 2025 Your Company</p>
     </footer>
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
-
