--- a/templates/services.html
+++ b/templates/services.html
@@ -23,9 +23,11 @@
             </li>
             {% endfor %}
         </ul>
- </div>
+    </div>
     <footer>
         <p>&copy; 2025 Your Company</p>
     </footer>
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
+
