--- a/templates/quote.html
+++ b/templates/quote.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Request a Quote</h1>
         <nav>
-            <a="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('index') }}">Home</a>
         </nav>
     </header>
     <div class="container">
@@ -20,7 +20,7 @@
             <label for="company">Company:</label>
             <input type="text" id="company" name="company"><br>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br>
+           email" required><br>
             <label for="contact">Contact:</label>
             <input type="text" id="contact" name="contact" required><br>
             <label for="service">Select Service:</label>
@@ -37,6 +37,6 @@
     <footer>
         <p>&copy; 2025 Your Company</p>
     </footer>
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 </html>
-
