--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ post.title }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
@@ -20,4 +20,6 @@
     <footer>
         <p>&copy; 2025 Your Company</p>
     </footer>
-</body
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+</body>
+</html>
